readProspect Lite (non-auth version)
